mudando codigo para java